Add more performance tests for issue tracking